--- a/other/TupleSpace/TupleSpace/TupleSpace.csproj
+++ b/other/TupleSpace/TupleSpace/TupleSpace.csproj
@@ -39,6 +39,7 @@
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="TupleSpace.cs" />
     <Compile Include="Tuple.cs" />
+    <Compile Include="TupleList.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
